// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t0] vision pass attempted without approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 3.9s ✗
              ├─ judge: .route/1.vision.guard.judge.i1p1.d0db8b0c016b73977fad2df32c9cb3516381287e27403d824d4da3c9611dbe73.dabe714fd2c418ba29e23363f9e9d18ba44e891dd196bc817fb5bd0bd66a92d8.j1.md
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m
[0m[31mj1: inflight
  ✗ j1: finished 3.9s
    reason: wait for human approval

🔎 judge 1
   ├─
   │
   │  🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge
   │  passed: false
   │  reason: wait for human approval
   │  [0m[31m[0m
   │  [0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge[0m
   │  [0m[31m   └─ ✋ blocked by constraints[0m
   │  [0m[31m[0m
   │  exit code: 1
   │
   └─[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t1] vision pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished 2.5s ✓
              └─ judge: .route/1.vision.guard.judge.i1p1.d0db8b0c016b73977fad2df32c9cb3516381287e27403d824d4da3c9611dbe73.9b7fca35d5c2f9d6a6bedaa04679bafdd19a55ff89872d2b45aeb00178e59614.j1.md"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t2] criteria pass attempted without promise then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (self-review required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = all-real-junior
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  a junior recently worked on this criteria. are there any unquestioned
   │  │    assumptions the junior took as requirements? any of these need to
   │  │    be asked to the wisher instead?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that all-real-junior[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t3] criteria pass attempted with promise but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (self-review required)

🌕 lets reflect
   │
   ├─ review.self 1/1
   │  ├─ slug = all-real-junior
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  a junior recently worked on this criteria. are there any unquestioned
   │  │    assumptions the junior took as requirements? any of these need to
   │  │    be asked to the wisher instead?
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that all-real-junior[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t5] blueprint pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   └─ passage = blocked (self-review required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = behavior.declaration.coverage
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for coverage of the behavior declaration.
   │  │  
   │  │    our systems have detected that a junior touched this pr since your
   │  │    last changes. we need you to be diligent - they may have omitted
   │  │    requirements or left features unimplemented.
   │  │  
   │  │    go through the behavior's vision and criteria, then check
   │  │    each requirement against the blueprint line by line:
   │  │    - is every requirement from the vision addressed?
   │  │    - is every criterion from the criteria satisfied?
   │  │    - did the junior skip or forget any part of the spec?
   │  │  
   │  │    emit your findings to .behavior/$thisBehavior/reviews/{stone}.behavior.declaration.coverage.md
   │  │    then fix all gaps before you continue.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as promised --that behavior.declaration.coverage[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t6] blueprint pass attempted with promises but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.3.blueprint.v1
   └─ passage = blocked (self-review required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = behavior.declaration.coverage
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for coverage of the behavior declaration.
   │  │  
   │  │    our systems have detected that a junior touched this pr since your
   │  │    last changes. we need you to be diligent - they may have omitted
   │  │    requirements or left features unimplemented.
   │  │  
   │  │    go through the behavior's vision and criteria, then check
   │  │    each requirement against the blueprint line by line:
   │  │    - is every requirement from the vision addressed?
   │  │    - is every criterion from the criteria satisfied?
   │  │    - did the junior skip or forget any part of the spec?
   │  │  
   │  │    emit your findings to .behavior/$thisBehavior/reviews/{stone}.behavior.declaration.coverage.md
   │  │    then fix all gaps before you continue.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 3.3.blueprint.v1 --as promised --that behavior.declaration.coverage[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t8] execution pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN.v1
   └─ passage = blocked (self-review required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = behavior.declaration.coverage
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for coverage of the behavior declaration.
   │  │  
   │  │    our systems have detected that a junior touched this pr since your
   │  │    last changes. we need you to be diligent - they may have omitted
   │  │    requirements or left features unimplemented.
   │  │  
   │  │    go through the behavior's vision, criteria, and blueprint, then check
   │  │    each requirement against the code line by line:
   │  │    - is every requirement from the vision addressed?
   │  │    - is every criterion from the criteria satisfied?
   │  │    - is every component from the blueprint implemented?
   │  │    - did the junior skip or forget any part of the spec?
   │  │  
   │  │    emit your findings to .behavior/$thisBehavior/reviews/{stone}.behavior.declaration.coverage.md
   │  │    then fix all gaps before you continue.
   │  │
   │  └─
   │
   ├─ after you finish 🪷
   │  ├─
   │  │
   │  │  - did you check slowly, step by step?
   │  │  - did you take your time, or rush through?
   │  │  - have you been honest with yourself?
   │  │  - if you found issues, fix them before you promise
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN.v1 --as promised --that behavior.declaration.coverage[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;
